# plexorank

./: .gitignore  LICENSE  README.md  pyproject.toml
src/plexorank/: cipher_tables.py  rank.py  utils.py
