[project]
name = "plexorank"
version = "0.0.4"
authors = [
  { name="Alex Martin", email="raymond.alex.martin@gmail.com"},
]
description = "A lexicographical ranking system for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/subtleco/pylex"
"Bug Tracker" = "https://github.com/subtleco/pylex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


